# palmeiras_analytics_br

./: .gitignore  README.md  pyproject.toml
csv_datasets/: events.csv  incidents.csv  shotmaps.csv
json_renamed/: j_01022022_10012028_event.json  j_01022022_10012028_incidents.json  j_01022022_10012028_lineups.json  j_01022022_10012028_shotmap.json  j_01022022_10012028_stats.json  j_01022023_10912164_event.json  j_01022023_10912164_incidents.json  j_01022023_10912164_lineups.json  j_01022023_10912164_shotmap.json  j_01022023_10912164_stats.json  j_01052019_8177057_event.json  j_01052019_8177057_incidents.json  j_01052019_8177057_lineups.json  j_01052019_8177057_shotmap.json  j_01052019_8177057_stats.json  j_01092019_8177220_event.json  j_01092019_8177220_incidents.json  j_01092019_8177220_lineups.json  j_01092019_8177220_shotmap.json  j_01092019_8177220_stats.json  j_01102023_11067375_event.json  j_01102023_11067375_incidents.json  j_01102023_11067375_lineups.json  j_01102023_11067375_shotmap.json  j_01102023_11067375_stats.json  j_01112023_11067287_event.json  j_01112023_11067287_incidents.json  j_01112023_11067287_lineups.json  j_01112023_11067287_shotmap.json  j_01112023_11067287_stats.json  j_01122019_8177391_event.json  j_01122019_8177391_incidents.json  j_01122019_8177391_lineups.json  j_01122019_8177391_shotmap.json  j_01122019_8177391_stats.json  j_02022019_8107975_event.json  j_02022019_8107975_incidents.json  j_02022019_8107975_lineups.json  j_02022019_8107975_shotmap.json  j_02022019_8107975_stats.json  (+1792 more)
notebooks/data_wrangling/: wrangling_events.ipynb  (+4 more)
